--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -15,10 +15,10 @@
   
   <system.serviceModel>
     <extensions>
-      <!--<behaviorExtensions>
+      <behaviorExtensions>
         <add name="crossOriginResourceSharingBehavior"
           type="Service_Layer.Services.CORSEnablingBehavior, Service_Layer, Version=1.0.0.0, Culture=neutral" />
-      </behaviorExtensions>-->
+      </behaviorExtensions>
     </extensions>
     <services>
       <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SSistemaService">
@@ -27,12 +27,15 @@
       <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SModuloService">
         <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISModuloService" />
       </service>
+      <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SMenuService">
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISMenuService" />
+      </service>
     </services>
     <behaviors>
       <endpointBehaviors>
         <behavior name="web">
           <webHttp />
-          <!--<crossOriginResourceSharingBehavior />-->
+          <crossOriginResourceSharingBehavior />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
