--- a/Interface_Layer/Interface_Layer.csproj
+++ b/Interface_Layer/Interface_Layer.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\PassParameter.cs" />
     <Compile Include="Models\Sistemas\MenuModel.cs" />
     <Compile Include="Models\Sistemas\ModuloModel.cs" />
     <Compile Include="Models\Sistemas\SistemaModel.cs" />
@@ -178,6 +179,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Business_Layer\Business_Layer.csproj">
+      <Project>{d4123c2e-9022-4522-acab-404ce11142f4}</Project>
+      <Name>Business_Layer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Domain_Layer\Domain_Layer.csproj">
       <Project>{98dbea5b-4174-4ddb-9a3d-460a58b2a9d4}</Project>
       <Name>Domain_Layer</Name>
