--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -21,15 +21,12 @@
       </behaviorExtensions>
     </extensions>
     <services>
-      <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SSistemaService">
-        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISSistemaService" />
+      <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.SSistemasServices">
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISSistemasServices" />
       </service>
-      <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SModuloService">
+      <!--<service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SModuloService">
         <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISModuloService" />
-      </service>
-      <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SMenuService">
-        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISMenuService" />
-      </service>
+      </service>-->
     </services>
     <behaviors>
       <endpointBehaviors>
