--- a/Business_Layer/Business_Layer.csproj
+++ b/Business_Layer/Business_Layer.csproj
@@ -67,13 +67,12 @@
     <Compile Include="Logics\Sistemas\IBMenuLogic.cs" />
     <Compile Include="Logics\Sistemas\IBModuloLogic.cs" />
     <Compile Include="Logics\Sistemas\IBSistemaLogic.cs" />
+    <Compile Include="Utils\RestOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Utils\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
