--- a/Service_Layer/Service_Layer.csproj
+++ b/Service_Layer/Service_Layer.csproj
@@ -51,9 +51,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Services\Sistemas\SMenuService.svc" />
-    <Content Include="Services\Sistemas\SModuloService.svc" />
-    <Content Include="Services\Sistemas\SSistemaService.svc" />
+    <Content Include="Services\SMenuService.svc" />
+    <Content Include="Services\SSistemasServices.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -61,22 +60,17 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CORSEnablingBehavior.cs" />
-    <Compile Include="Services\Sistemas\ISMenuService.cs" />
-    <Compile Include="Services\Sistemas\ISModuloService.cs" />
-    <Compile Include="Services\Sistemas\ISSistemaService.cs" />
-    <Compile Include="Services\Sistemas\SMenuService.svc.cs">
+    <Compile Include="Services\ISMenuService.cs" />
+    <Compile Include="Services\ISSistemasServices.cs" />
+    <Compile Include="Services\SMenuService.svc.cs">
       <DependentUpon>SMenuService.svc</DependentUpon>
     </Compile>
-    <Compile Include="Services\Sistemas\SModuloService.svc.cs">
-      <DependentUpon>SModuloService.svc</DependentUpon>
-    </Compile>
-    <Compile Include="Services\Sistemas\SSistemaService.svc.cs">
-      <DependentUpon>SSistemaService.svc</DependentUpon>
+    <Compile Include="Services\SSistemasServices.svc.cs">
+      <DependentUpon>SSistemasServices.svc</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Services\Personas\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
