--- a/Interface_Layer/packages.config
+++ b/Interface_Layer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AngularJS.Core" version="1.6.1" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AutoMapper" version="5.2.0" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
