--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -1,9 +1,48 @@
 <?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+  </configSections>
+  
   <connectionStrings>
     <add name="DBMIDIS" connectionString="Data Source=XE;User ID=ES_SEGURIDAD;Password=midis2017;pooling=true;min pool size=5;Max Pool Size=60" providerName="Oracle.DataAccess.Client"/>
   </connectionStrings>
-  
+
+  <log4net>
+    <appender name="LogDebugAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(debug)-%date{yyyyMMdd}.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <datePattern value="yyyyMMdd" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger – %message%newline" />
+      </layout>
+    </appender>
+    <appender name="LogErrorAppender" type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(error)-%date{yyyyMMdd}.log" />
+      <appendToFile value="true" />
+      <rollingStyle value="Date" />
+      <datePattern value="yyyyMMdd" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger – %message%newline" />
+      </layout>
+    </appender>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="LogDebugAppender" />
+    </root>
+    <logger name="logError">
+      <level value="ERROR"/>
+      <appender-ref ref="LogErrorAppender"/>
+    </logger>
+    <!--<logger name="NHibernate">
+      <level value="ERROR" />
+    </logger>
+    <logger name="NHibernate.SQL">
+      <level value="ERROR" />
+    </logger>-->
+  </log4net>
+
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
@@ -20,6 +59,7 @@
           type="Service_Layer.Services.CORSEnablingBehavior, Service_Layer, Version=1.0.0.0, Culture=neutral" />
       </behaviorExtensions>
     </extensions>
+    
     <services>
       <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.SSistemasServices">
         <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISSistemasServices" />
@@ -28,6 +68,7 @@
         <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISModuloService" />
       </service>-->
     </services>
+    
     <behaviors>
       <endpointBehaviors>
         <behavior name="web">
@@ -70,7 +111,5 @@
   <system.webServer>
     <directoryBrowse enabled="true"/>
     <validation validateIntegratedModeConfiguration="false"/>
-    
   </system.webServer>
-
 </configuration>
