--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -9,7 +9,7 @@
   </connectionStrings>
 
   <log4net>
-    <appender name="LogDebugAppender" type="log4net.Appender.RollingFileAppender">
+    <appender name="LogInfoAppender" type="log4net.Appender.RollingFileAppender">
       <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(debug)-%date{yyyyMMdd}.log" />
       <appendToFile value="true" />
       <rollingStyle value="Date" />
@@ -17,6 +17,10 @@
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger – %message%newline" />
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="INFO"/>
+        <levelMax value="INFO"/>
+      </filter>
     </appender>
     <appender name="LogErrorAppender" type="log4net.Appender.RollingFileAppender">
       <file type="log4net.Util.PatternString" value="E:\proyectos\RNU\log\SlnSeguridad_Service_Layer(error)-%date{yyyyMMdd}.log" />
@@ -26,21 +30,23 @@
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level %logger – %message%newline" />
       </layout>
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <levelMin value="WARN"/>
+        <levelMax value="ERROR"/>
+      </filter>
     </appender>
     <root>
       <level value="DEBUG" />
-      <appender-ref ref="LogDebugAppender" />
-    </root>
-    <logger name="logError">
-      <level value="ERROR"/>
+      <level value="ALL"/>
+      <appender-ref ref="LogInfoAppender"/>
       <appender-ref ref="LogErrorAppender"/>
-    </logger>
-    <!--<logger name="NHibernate">
-      <level value="ERROR" />
+    </root>
+    <logger name="NHibernate">
+      <level value="ERROR"/>
     </logger>
     <logger name="NHibernate.SQL">
-      <level value="ERROR" />
-    </logger>-->
+      <level value="ERROR"/>
+    </logger>
   </log4net>
 
   <appSettings>
