--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -70,9 +70,9 @@
       <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.SSistemasServices">
         <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISSistemasServices" />
       </service>
-      <!--<service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.Sistemas.SModuloService">
-        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.Sistemas.ISModuloService" />
-      </service>-->
+      <service behaviorConfiguration="serviceBehavior" name="Service_Layer.Services.SPersonasService">
+        <endpoint address="" behaviorConfiguration="web" binding="webHttpBinding" contract="Service_Layer.Services.ISPersonasService" />
+      </service>
     </services>
     
     <behaviors>
