--- a/Service_Layer/Service_Layer.csproj
+++ b/Service_Layer/Service_Layer.csproj
@@ -40,6 +40,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="log4net, Version=2.0.7.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.7\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
@@ -62,6 +66,15 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Personas\MenuRolModel.cs" />
+    <Compile Include="Models\Personas\PersonaModel.cs" />
+    <Compile Include="Models\Personas\RolModel.cs" />
+    <Compile Include="Models\Personas\TipoDocumentoPersonaModel.cs" />
+    <Compile Include="Models\Personas\UsuarioModel.cs" />
+    <Compile Include="Models\Personas\UsuarioRolModel.cs" />
+    <Compile Include="Models\Sistemas\MenuModel.cs" />
+    <Compile Include="Models\Sistemas\ModuloModel.cs" />
+    <Compile Include="Models\Sistemas\SistemaModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CORSEnablingBehavior.cs" />
     <Compile Include="Services\ISPersonasService.cs" />
