--- a/Service_Layer/Web.config
+++ b/Service_Layer/Web.config
@@ -78,7 +78,7 @@
     <behaviors>
       <endpointBehaviors>
         <behavior name="web">
-          <webHttp />
+          <webHttp helpEnabled="true"  automaticFormatSelectionEnabled="true" defaultOutgoingResponseFormat="Json" />
           <crossOriginResourceSharingBehavior />
         </behavior>
       </endpointBehaviors>
@@ -103,12 +103,12 @@
 
     <bindings>
       <webHttpBinding>
-        <binding name="Binding" crossDomainScriptAccessEnabled="true">
+        <binding name="Binding" crossDomainScriptAccessEnabled="true" maxReceivedMessageSize="52428800" maxBufferPoolSize="52428800" useDefaultWebProxy="false">
           <security mode="Transport">
             <transport clientCredentialType="None" />
           </security>
         </binding>
-        <binding name="httpbind" crossDomainScriptAccessEnabled="true">
+        <binding name="httpbind" crossDomainScriptAccessEnabled="true" maxReceivedMessageSize="52428800" maxBufferPoolSize="52428800" useDefaultWebProxy="false">
         </binding>
       </webHttpBinding>
     </bindings>
