--- a/Interface_Layer/Interface_Layer.csproj
+++ b/Interface_Layer/Interface_Layer.csproj
@@ -164,6 +164,7 @@
     <Content Include="Views\Menus.html" />
     <Content Include="Views\Modulos.html" />
     <Content Include="Views\Sistemas.html" />
+    <Content Include="Views\UsuariosRoles.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
