--- a/Interface_Layer/packages.config
+++ b/Interface_Layer/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngularJS.Core" version="1.6.1" targetFramework="net45" />
+  <package id="AngularJS.Core" version="1.6.2" targetFramework="net45" />
+  <package id="AngularJS.Route" version="1.6.2" targetFramework="net45" />
+  <package id="angular-local-storage" version="0.5.2" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="bootstrap" version="3.3.7" targetFramework="net45" />
   <package id="jQuery" version="3.1.1" targetFramework="net45" />
