--- a/Domain_Layer/Domain_Layer.csproj
+++ b/Domain_Layer/Domain_Layer.csproj
@@ -62,7 +62,9 @@
     <Compile Include="Converters\Personas\DUsuarioConverter.cs" />
     <Compile Include="Converters\Personas\DUsuarioRolConverter.cs" />
     <Compile Include="Converters\Sistemas\DMenuConverter.cs" />
+    <Compile Include="Converters\Sistemas\DMenuOpcionConverter.cs" />
     <Compile Include="Converters\Sistemas\DModuloConverter.cs" />
+    <Compile Include="Converters\Sistemas\DOpcionConverter.cs" />
     <Compile Include="Converters\Sistemas\DSistemaConverter.cs" />
     <Compile Include="Dtos\Personas\DMenuRolDto.cs" />
     <Compile Include="Dtos\Personas\DPersonaDto.cs" />
@@ -71,7 +73,9 @@
     <Compile Include="Dtos\Personas\DUsuarioDto.cs" />
     <Compile Include="Dtos\Personas\DUsuarioRolDto.cs" />
     <Compile Include="Dtos\Sistemas\DMenuDto.cs" />
+    <Compile Include="Dtos\Sistemas\DMenuOpcionDto.cs" />
     <Compile Include="Dtos\Sistemas\DModuloDto.cs" />
+    <Compile Include="Dtos\Sistemas\DOpcionDto.cs" />
     <Compile Include="Dtos\Sistemas\DSistemaDto.cs" />
     <Compile Include="Queries\DQuery.cs" />
     <Compile Include="Queries\Personas\DMenuRolQuery.cs" />
