--- a/Entity_Layer/Entity_Layer.csproj
+++ b/Entity_Layer/Entity_Layer.csproj
@@ -46,7 +46,9 @@
     <Compile Include="Entities\Personas\EUsuario.cs" />
     <Compile Include="Entities\Personas\EUsuarioRol.cs" />
     <Compile Include="Entities\Sistemas\EMenu.cs" />
+    <Compile Include="Entities\Sistemas\EMenuOpcion.cs" />
     <Compile Include="Entities\Sistemas\EModulo.cs" />
+    <Compile Include="Entities\Sistemas\EOpcion.cs" />
     <Compile Include="Entities\Sistemas\ESistema.cs" />
     <Compile Include="Mappings\Personas\EMenuRolMapping.cs" />
     <Compile Include="Mappings\Personas\EPersonaMapping.cs" />
@@ -55,7 +57,9 @@
     <Compile Include="Mappings\Personas\EUsuarioMapping.cs" />
     <Compile Include="Mappings\Personas\EUsuarioRolMapping.cs" />
     <Compile Include="Mappings\Sistemas\EMenuMapping.cs" />
+    <Compile Include="Mappings\Sistemas\EMenuOpcionMapping.cs" />
     <Compile Include="Mappings\Sistemas\EModuloMapping.cs" />
+    <Compile Include="Mappings\Sistemas\EOpcionMapping.cs" />
     <Compile Include="Mappings\Sistemas\ESistemaMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
