--- a/Interface_Layer/Interface_Layer.csproj
+++ b/Interface_Layer/Interface_Layer.csproj
@@ -66,6 +66,9 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Angular\myApp.js" />
+    <Content Include="login\authenticate.html" />
+    <Content Include="login\login.html" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
@@ -77,7 +80,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Angular\Controllers\loginCtrl.js" />
     <Content Include="Angular\Controllers\menuCtrl.js" />
     <Content Include="Angular\Controllers\menurolCtrl.js" />
     <Content Include="Angular\Controllers\menusCtrl.js" />
@@ -87,9 +89,7 @@
     <Content Include="Angular\Controllers\rolusuarioCtrl.js" />
     <Content Include="Angular\Controllers\sistemaCtrl.js" />
     <Content Include="Angular\Controllers\usuarioCtrl.js" />
-    <Content Include="Angular\myApp.module.js" />
-    <Content Include="Angular\Services\accountSrv.js" />
-    <Content Include="Angular\Services\loginSrv.js" />
+    <Content Include="Angular\myAppLogin.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -122,13 +122,22 @@
     <Content Include="Scripts\jquery-3.1.1.slim.js" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.js" />
     <Content Include="Views\Index.html" />
-    <Content Include="Views\Login.html" />
+    <Content Include="Views\Menus.html" />
+    <Content Include="Views\MenusRoles.html" />
+    <Content Include="Views\Modulos.html" />
+    <Content Include="Views\Personas.html" />
+    <Content Include="Views\Roles.html" />
+    <Content Include="Views\Sistemas.html" />
+    <Content Include="Views\Usuarios.html" />
+    <Content Include="Views\UsuariosRoles.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Angular\Services\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
